[package]
name = "rustopencvtest"
version = "0.1.0"
authors = ["Amédée d'Aboville <amedee.daboville@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version="0.29.3", default-features=false, features=["opencv-4", "buildtime-bindgen", "contrib"]}
